@@ -3,6 +3,7 @@ package com.ecommerce.backend.user;
 import com.ecommerce.backend.shared.enums.MessageStatus;
 import com.ecommerce.backend.shared.exception.RequestValidationException;
 import com.ecommerce.backend.shared.response.BaseResponse;
+import com.ecommerce.backend.shared.security.enums.UserRole;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.security.access.prepost.PreAuthorize;
@@ -11,18 +12,23 @@ import org.springframework.validation.annotation.Validated;
 import org.springframework.web.bind.annotation.*;
 
 import java.math.BigInteger;
-import java.util.List;
+import java.util.Collections;
 
 @RequiredArgsConstructor
 @RequestMapping("/api/v1/users")
 @RestController
 public class UserController {
     private final UserService userService;
+    private final UserDTOMapper userDTOMapper;
 
     @GetMapping
-    @PreAuthorize("hasAuthority('user:read')")
+    @PreAuthorize("hasAuthority('user:read_all')")
     public UserResponse getUsers() {
-        var userDTOList = userService.fetchAllUsers();
+        var userDTOList = userService
+                .fetchAllUsers()
+                .stream()
+                .map(userDTOMapper)
+                .toList();
 
         return new UserResponse(
                 HttpStatus.OK.value(),
@@ -32,11 +38,31 @@ public class UserController {
     }
 
     @GetMapping("{userID}")
-    @PreAuthorize("hasAnyRole('ROLE_ADMIN', 'ROLE_EMPLOYEE', 'ROLE_CUSTOMER')")
+    @PreAuthorize("hasAuthority('user:read_one')")
     public UserResponse getUserByUserID(
             @PathVariable("userID") BigInteger userID
     ) {
-        var userDTOList = List.of(userService.fetchUserByUserID(userID));
+        var userDTOList = Collections.singletonList(
+                userDTOMapper.apply(userService.fetchUserByUserID(userID))
+        );
+
+        return new UserResponse(
+                HttpStatus.OK.value(),
+                MessageStatus.SUCCESSFUL,
+                userDTOList
+        );
+    }
+
+    @GetMapping("/role")
+    @PreAuthorize("hasAuthority('user:read_all')")
+    public UserResponse getUsersByRole(
+            @RequestParam(value = "role") UserRole role
+    ) {
+        var userDTOList = userService
+                .fetchUsersByRole(role)
+                .stream()
+                .map(userDTOMapper)
+                .toList();
 
         return new UserResponse(
                 HttpStatus.OK.value(),
@@ -46,7 +72,7 @@ public class UserController {
     }
 
     @PostMapping
-    @PreAuthorize("hasAuthority('user:write')")
+    @PreAuthorize("hasAuthority('user:create')")
     public UserResponse postUser(
             @Validated @RequestBody UserRegistrationRequest request,
             BindingResult errors
@@ -55,7 +81,9 @@ public class UserController {
             throw new RequestValidationException(errors);
         }
 
-        var userDTOList = List.of(userService.addUser(request));
+        var userDTOList = Collections.singletonList(
+                userDTOMapper.apply(userService.addUser(request))
+        );
 
         return new UserResponse(
                 HttpStatus.OK.value(),
@@ -64,21 +92,8 @@ public class UserController {
         );
     }
 
-    @DeleteMapping("{userID}")
-    @PreAuthorize("hasAuthority('user:write')")
-    public BaseResponse deleteUser(
-            @PathVariable("userID") BigInteger userID
-    ) {
-        userService.deleteUser(userID);
-
-        return new BaseResponse(
-                HttpStatus.OK.value(),
-                MessageStatus.SUCCESSFUL
-        );
-    }
-
     @PutMapping("{userID}")
-    @PreAuthorize("hasAnyRole('ROLE_ADMIN', 'ROLE_EMPLOYEE', 'ROLE_CUSTOMER')")
+    @PreAuthorize("hasAuthority('user:update')")
     public UserResponse putUser(
             @PathVariable("userID") BigInteger userID,
             @Validated @RequestBody UserUpdateRequest request,
@@ -88,12 +103,27 @@ public class UserController {
             throw new RequestValidationException(errors);
         }
 
-        var userDTOList = List.of(userService.updateUser(userID, request));
+        var userDTOList = Collections.singletonList(
+                userDTOMapper.apply(userService.updateUser(userID, request))
+        );
 
         return new UserResponse(
                 HttpStatus.OK.value(),
                 MessageStatus.SUCCESSFUL,
                 userDTOList
+        );
+    }
+
+    @DeleteMapping("{userID}")
+    @PreAuthorize("hasAuthority('user:delete')")
+    public BaseResponse deleteUser(
+            @PathVariable("userID") BigInteger userID
+    ) {
+        userService.deleteUser(userID);
+
+        return new BaseResponse(
+                HttpStatus.OK.value(),
+                MessageStatus.SUCCESSFUL
         );
     }
 }
